Fix equation spacing bug

--- a/src/global.scss
+++ b/src/global.scss
@@ -34,7 +34,6 @@ $nav-bar-logo-font-size: 2 * $base-length;
 $nav-bar-separator-color: #c0c0c0;
 
 // Styling for main view area.
-$view-block-equation-vertical-margin: 1.3 * $base-length;
 $view-content-vertical-padding: 3.5 * $base-length;
 $view-header-margin-bottom: 1.75 * $base-length;
 $view-label-background-color-active: #dddddd;
